--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.5",
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
+    "classname": "^0.0.0",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
